# VulkanAbstractRenderer-VAR

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.build.props  LICENSE  README.md  premake5.lua
Sandbox/: CMakeLists.txt
Sandbox/Sandbox.dir/Debug/: Sandbox.exe.recipe
Sandbox/Sandbox.dir/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/Sandbox.dir/Release/: Sandbox.exe.recipe
Sandbox/Sandbox.dir/Release/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/src/: main.cpp
Sandbox/src/Shaders/: compileshaders.bat
Sandbox/src/Shaders/Compiled/Vertex/: test.vert.spv
Sandbox/src/Shaders/Raw/GLSL/Vertex/: test.vert
Sandbox/src/Vertex/: Vertex.h
VAR/: CMakeLists.txt
VAR/VAR.dir/Debug/: VAR.exe.recipe  vc142.idb
VAR/VAR.dir/Debug/VAR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
VAR/VAR.dir/Release/: VAR.exe.recipe
VAR/VAR.dir/Release/VAR.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VAR/src/: main.cpp
VAR/src/Logger/: Logger.cpp  Logger.h
VAR/src/Precompiled/: Pch.h
VAR/src/Renderer/: Renderer.cpp  Renderer.h
VAR/src/Renderer/Base/: VulkanBase.h
VAR/src/Renderer/Device/: LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h
VAR/src/Renderer/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h
VAR/src/Renderer/GraphicsPipeline/FixedFuncs/: FixedFuncStruct.h
VAR/src/Renderer/ImageViews/: ImageViews.cpp  ImageViews.h
VAR/src/Renderer/Instances/: ApplicationInfo.h  Instance.cpp  Instance.h  ValidationLayers.cpp  ValidationLayers.h  VkDebugUtilMessengerInfo.h
VAR/src/Renderer/PipelineLayout/: PipelineLayout.cpp  PipelineLayout.h
VAR/src/Renderer/RenderPass/: RenderPass.cpp  RenderPass.h
VAR/src/Renderer/Rendering/: FrameDrawer.cpp  FrameDrawer.h
VAR/src/Renderer/Rendering/Buffers/: VertexBuffer.cpp  VertexBuffer.h
VAR/src/Renderer/Rendering/CommandBuffers/: CommandBufferPool.cpp  CommandBufferPool.h
VAR/src/Renderer/Rendering/FrameBuffers/: FrameBufferPool.cpp  FrameBufferPool.h
VAR/src/Renderer/Rendering/MultiThreading/: GraphicsThreadPool.cpp  GraphicsThreadPool.h
VAR/src/Renderer/ShaderModules/: ShaderModule.cpp  ShaderModule.h  ShaderModules.cpp  ShaderModules.h
VAR/src/Renderer/Shaders/GLSL/Vertex/: test.vert
VAR/src/Renderer/Swapchain/: SwapChain.cpp  SwapChain.h
VAR/src/Renderer/Utilities/CustomTypes/: QueueFamiliyIndices.h  SwapchainSupportDetails.h
VAR/src/Renderer/Utilities/FileManagment/: GetShaderTypeString.cpp  GetShaderTypeString.h  GetSuffix.cpp  GetSuffix.h  readFile.cpp  readFile.h
VAR/src/Renderer/Window/: WindowMultiPlatform.cpp  WindowMultiPlatform.h
VAR/src/VertexInputs/: VertexInputBase.h
